[project]
name = "gnews-server"
version = "0.1.0"
description = "GNews MCP server exposing search and top headlines via FastMCP."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.27.1",
    "httpx>=0.28.0",
    "pydantic>=2.7.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "scalekit-sdk-python>=2.11.0",
    "python-dotenv>=1.1.1",
    "load-dotenv>=0.1.0",
    "fastmcp>=3.4.2",
]
